# VirtualTurtle

./: .gitignore  README.md
apriltag_ros_tweaked/: CMakeLists.txt  package.xml
apriltag_ros_tweaked/cfg/: tags_36h11.yaml
apriltag_ros_tweaked/launch/: launch_tweaked.launch.yml
controller/: CMakeLists.txt  package.xml
controller/src/: navigation_node.cpp
group28_assignament_1/: CMakeLists.txt  package.xml
group28_assignament_1/cfg/: tags_36h11.yaml
group28_assignament_1/how2_test_components/: how2_circle_detector.txt  how2_tag_detector.txt
group28_assignament_1/include/group28_assignament_1/: circle_detector.hpp  tag_detector.hpp  utilities.hpp
group28_assignament_1/launch/: launch.py  launch_apriltag.yaml  nodes.launch.py  sim.launch.py
group28_assignament_1/msg/: TagDetection.msg
group28_assignament_1/src/: circle_detector.cpp  navigation_node.cpp  tag_detector.cpp  utilities.cpp
group28_assignament_1/srv/: DetectCircles.srv  DetectTags.srv
how2_test_components/: how2_circle_detector.txt  how2_tag_detector.txt
